k8s-deploy/manifests/egov-app/egov-hello-error-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-hello-error
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-hello
      variant: error
  template:
    metadata:
      labels:
        app: egov-hello
        variant: error
        version: "v4.3.0"
    spec:
      containers:
      - name: egov-hello
        image: egovframe/egovhello:4.3.0.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
