k8s-deploy/manifests/egov-app/egov-cmmncode-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-cmmncode
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-cmmncode
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-cmmncode
        version: "v4.3.2"
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "15020"
    spec:
      containers:
      - name: egov-cmmncode
        image: egovframe/egovcmmncode:4.3.2.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 5
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /actuator/health
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
          failureThreshold: 10
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: egov-cmmncode
  namespace: egov-app
spec:
  selector:
    app: egov-cmmncode
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
