k8s-deploy/manifests/egov-app/egov-common-all-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-common-all
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-common-all
  template:
    metadata:
      labels:
        app: egov-common-all
    spec:
      containers:
      - name: egov-common-all
        image: egovcommonall:k8s
        volumeMounts:
        - name: config-volume
          mountPath: /usr/local/tomcat/webapps/ROOT/WEB-INF/classes/egovframework/egovProps/globals.properties
          subPath: globals.properties
      volumes:
      - name: config-volume
        configMap:
          name: egov-common-all-globals
          items:
          - key: globals.properties
            path: globals.properties
---
apiVersion: v1
kind: Service
metadata:
  name: egov-common-all
  namespace: egov-app
spec:
  selector:
    app: egov-common-all
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 32080
  type: NodePort
