k8s-deploy/manifests/egov-app/egov-hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-hello
  namespace: egov-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: egov-hello
  template:
    metadata:
      labels:
        app: egov-hello
        variant: normal
        version: "v4.3.0"
    spec:
      containers:
      - name: egov-hello
        image: egovframe/egovhello:4.3.0.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: egov-hello
  namespace: egov-app
spec:
  type: NodePort
  selector:
    app: egov-hello
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30086  # 노드포트를 30086으로 설정 (8086에 매핑)
