k8s-deploy/manifests/egov-app/egov-login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-login
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-login
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-login
        version: "v4.3.2"
    spec:
      containers:
      - name: egov-login
        image: egovframe/egovlogin:4.3.2.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
          name: http
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: egov-login
  namespace: egov-app
spec:
  selector:
    app: egov-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
