k8s-deploy/manifests/egov-app/egov-main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-main
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-main
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-main
        version: "v4.3.2"
    spec:
      containers:
      - name: egov-main
        image: egovframe/egovmain:4.3.2.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 5
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: egov-main
  namespace: egov-app
spec:
  selector:
    app: egov-main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
