k8s-deploy/manifests/egov-app/egov-mobileid-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-mobileid
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-mobileid
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-mobileid
        version: "v4.3.2"
    spec:
      containers:
      - name: egov-mobileid
        image: egovframe/egovmobileid:4.3.2.k8s
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-volume
          mountPath: /app/config
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1Gi"
            cpu: "500m"
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          # To use Local Path storage, uncomment this and comment out the NFS claim
          # Using NFS storage
          claimName: egov-mobileid-pvc-nfs  # PVC 사용
          # Using Local Path storage
          #claimName: egov-mobileid-pvc-local
          
---
apiVersion: v1
kind: Service
metadata:
  name: egov-mobileid
  namespace: egov-app
spec:
  selector:
    app: egov-mobileid
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
