k8s-deploy/manifests/egov-app/egov-questionnaire-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-questionnaire
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-questionnaire
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-questionnaire
        version: "v4.3.2"
    spec:
      containers:
      - name: egov-questionnaire
        image: egovframe/egovquestionnaire:4.3.2.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: egov-questionnaire
  namespace: egov-app
spec:
  selector:
    app: egov-questionnaire
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
