k8s-deploy/manifests/egov-app/egov-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-search
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-search
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-java: "true"
      labels:
        app: egov-search
        version: "v4.3.2"
    spec:
      containers:
      - name: egov-search
        image: egovframe/egovsearch:4.3.2.k8s
        imagePullPolicy: Always #IfNotPresent : Downloads the image only if it does not exist on the node
        ports:
        - containerPort: 80
        #resources:
        #  requests:
        #    cpu: "500m"
        #    memory: "4096Mi"
        #  limits:
        #    cpu: "500m"
        #    memory: "4096Mi"
        volumeMounts:
        - name: search-config-shared
          mountPath: /app/config
          subPath: config
          readOnly: true
        - name: search-config-shared
          mountPath: /app/model
          subPath: model
        - name: search-config-shared
          mountPath: /app/cacerts
          subPath: cacerts
          readOnly: true
        - name: search-config-shared
          mountPath: /app/example
          subPath: example
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
      volumes:
      - name: search-config-shared
        persistentVolumeClaim:
          # To use Local Path storage, uncomment this and comment out the NFS claim
          # Using NFS storage
          claimName: egov-search-config-pvc-nfs
          # Using Local Path storage
          #claimName: egov-search-config-pvc-local
---
apiVersion: v1
kind: Service
metadata:
  name: egov-search
  namespace: egov-app
spec:
  selector:
    app: egov-search
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30992
  type: NodePort
